gccida/c0/final_biv_value
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/final_biv_value/src/unroll.c:3675:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[bl_0->biv->mode] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/final_biv_value/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/final_biv_value/src/obj/unroll.o] Error 1
